initial draft of cassandra storage